# taxonomy-time-machine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  fetch-data.sh  fly.toml  get-lineage.py  index.html  load-data-events.sh  load-data.sh  models.py  nginx.conf  package-lock.json  package.json  pyproject.toml  query.py  test_app.py  test_models.py  ttm.py
backend/: .gitignore  Makefile  alembic.ini  analysis.ipynb  app.py  bench.sh  check-lineages.py  conftest.py  models.py  plot-sizes.ipynb  pyproject.toml  requirements.txt  test_models.py
backend/.ipynb_checkpoints/: analysis-checkpoint.ipynb
backend/alembic/: env.py
backend/alembic/versions/: 119d8f99f4dc_initial_migration.py  4bb4acc2c8d3_add_performance_indexes.py  c41a46328d8d_add_merged_into_id_column.py
backend/scripts/: fetch-data.sh  load-data.py
backend/taxonomy_time_machine/: __init__.py  check_lineages.py  event.py  load_data.py  models.py  taxonomy_time_machine.py  time_machine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: styles.css
frontend/src/components/: BulkNameResolver.vue  TaxonomyTimeMachine.vue
frontend/src/components/TaxonomyTimeMachine/: Timeline.vue
frontend/src/router/: index.ts
frontend/src/utils/: apiCache.ts
scripts/: check-lineages.py  create-events-csv.py  load-data.py
src/: App.vue
src/components/: HelloWorld.vue  TaxonomyTimeMachine.vue
