[project]
name = "taxonomy-time-machine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=4.0.0",
    "flask-smorest>=0.45.0",
    "flask>=3.1.0",
    "polars>=1.13.1",
    "pytest>=8.3.3",
    "taxonomy>=0.10.1",
    "tqdm>=4.67.0",
]

[project.scripts]
ttm-load = "taxonomy_time_machine.load_data:main"

[tool.setuptools.packages.find]
include = ["taxonomy_time_machine*"]
exclude = ["dumps*"]
