[project]
name = "taxonomy-time-machine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "flask-cors>=4.0.0",
    "flask-smorest>=0.45.0",
    "flask>=3.1.0",
    "polars",
    "sqlalchemy>=2.0.0",
    "taxonomy>=0.10.1",
    "tqdm>=4.67.0",
]

[project.scripts]
ttm-load = "taxonomy_time_machine.load_data:main"

[tool.setuptools.packages.find]
include = ["taxonomy_time_machine*"]
exclude = ["dumps*"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
